<resources>
    <!--Registration-->

    <string name="app_name">SplitWise_Clone</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_signed_in"> Signed in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_Login">Login</string>
    <string name="signup_success">User SignedUp successfully</string>
    <string name="signout">Sign Out</string>
    <string name="action_getLogin">Already have an account? Login here</string>
    <string name="action_getSignUp">Create a new Account</string>

    <string name="action_send">Send</string>
    <string name="error_title">Oops</string>
    <string name="error_registration">Registration attempt failed</string>
    <string name="error_Login">Login attempt failed</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_username">username is not valid</string>
    <string name="error_username_dupllicate">username already exists</string>
    <string name="error_username_notfound">UserName does not match</string>
    <string name="error_username_friend">Already a friend</string>
    <string name="amount_spent_by_you">Total amount spent by you</string>
    <string name="others_owe">Others owe</string>

    <!--Add User-->
    <string name="sample_message">Hello!</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="friends">Friends</string>
    <string name="add_friend">Add Friend</string>
    <string name="add_friend_name">NAME</string>
    <string name="add_friend_email">EMAIL</string>
    <string name="email_exists">Email does not Exist</string>
    <string name="email_nomatch">Email does not match</string>
    <string name="username_exists">UserName does not Exists</string>
    <string name="friendname_exists">There is already a member with this name</string>
    <string name="friend_added">friend added</string>
    <string name="close">CLOSE</string>
    <string name="friend_image">image of friend</string>

    <!--Add Group-->
    <string name="goto_details">goto expense details</string>
    <string name="group_list">Group List</string>
    <string name="groups">Groups</string>
    <string name="group_name">group_name</string>
    <string name="new_group">New Group</string>
    <string name="add_group">Add Group</string>
    <string name="saved_group">Saved Group</string>
    <string name="add_group_name"> Group Name</string>
    <string name="group_exists">Group Already Exists</string>
    <string name="error_add_member">Please add Group Members</string>
    <string name="error_add_owner">Group owner should be a member</string>
    <string name="group_delete_warning">Are you sure you want to delete this Group ?</string>
    <string name="group_deleted">Group Deleted</string>
    <string name="group_added">Group added</string>
    <string name="members">MEMBERS</string>
    <string name="non_members">OTHERS</string>
    <string name="add_group_image">click to add picture</string>
    <string name="group_image">image of group</string>
    <string name="groupname_warning">Please enter a Group Name</string>
    <string name="settle_up">Settle Up</string>
    <string name="settledup">You are all settled up \n Tap to show settled expenses</string>
    <string name="action_settleup">Settle up</string>
    <string name="action_export">Export</string>
    <string name="no_expense">No (Active) Expense in this Group</string>
    <string name="no_expense_friend">No (Active) Expense</string>
    <string name="no_arch_expense">No (Archived) Expense in this Group</string>
    <string name="export_title">Export Expenses</string>
    <string name="export_heading">Date,Description,PaidBy,DebtCredit,AmountDue</string>
    <string name="default_status">N/A</string>
    <string name="group_debt_separator">\n</string>
    <string name="from_group">from group</string>
    <string name="no_friend">Please add a friend to create a group</string>
    <string name="edit_group">Edit Group</string>

    <!--DB schema names-->
    <string name="goto_groupDetails">go to group details</string>
    <string name="db_users">users</string>
    <string name="db_balances">balances</string>
    <string name="db_friends">friends</string>
    <string name="db_email">email</string>
    <string name="db_imageUrl">imageUrl</string>

    <string name="db_groups">groups</string>
    <string name="db_expenses">expenses</string>
    <string name="db_archivedExpenses">archivedExpenses</string>

    <string name="db_members">members</string>
    <string name="db_nonMembers">nonMembers</string>
    <string name="db_owner">owner</string>
    <string name="db_photoUrl">photoUrl</string>
    <string name="db_amount">amount</string>
    <string name="db_status">status</string>

    <string name="db_name">name</string>
    <string name="db_totalAmount">totalAmount</string>
    <string name="db_dateSpent">dateSpent</string>
    <string name="db_category">category</string>
    <string name="db_splitDues">splitDues</string>
    <string name="db_images">images</string>

    <!--Expenses-->
    <string name="db_messages">messages</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="desc_error">Description should not be empty</string>
    <string name="amount_error">Amount should not be empty</string>
    <string name="warning_message">Are you sure,You want to delete this expense ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="date">Date:</string>
    <string name="split_expense_with">Split Expense with:</string>
    <string name="payer">Payer:</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="status">Status</string>
    <string name="add_expense">Add Expense</string>
    <string name="edit_expense_title">Edit Expense</string>
    <string name="you_are_owed">you are owed</string>
    <string name="default_amount">$0</string>
    <string name="opted_out">opted out</string>
    <string name="edit_expense">edit_expense</string>
    <string name="you">You</string>
    <string name="you_lent">you lent</string>
    <string name="you_borrowed">you borrowed</string>
    <string name="paid">paid</string>
    <string name="owes_you">owes you</string>
    <string name="lent_you">lent you</string>
    <string name="spent_you">spent you</string>
    <string name="you_owe">you owe</string>
    <string name="amount_you_spent">Amount you spent</string>
    <string name="amount_others_spent">Amount others spent</string>
    <string name="set_date">Set Date</string>

    <!--    Expense Menu-->
    <string name="mnu_resetorder">Reset</string>
    <string name="mnu_orderbycategory">Order By Category</string>
    <string name="mnu_export">Export</string>
    <string name="archivedExp">Archived Expenses</string>


    <!--TextUtils-->
    <string name="send_message">send Messages</string>
    <string name="invite_friend">Share with your friends</string>
    <string name="inviteafriend">Invite Friend</string>
    <string name="invite_text">Check out a new app: https://play.google.com/store/apps/details?id=</string>
    <string name="new_line">\n</string>
    <string name="offline">Offline</string>
    <string name="hint_friendname"><font size="20">Name</font></string>

    <string name="no_user_signed">user has not signed in</string>

    <!--    Notification-->
    <string name="server_key">AAAAs3JWc5U:APA91bE4JBDCWMBfb-oHZuBnmixezzdcP5MkOG3LVkjlwOpjZFVGEHOS7POx_oHxaC_D6GwKBzhbGWYBEDH_nIk6iCMAXUw_J4cow_YkJ2IapVp4XUuJ5ugdUw-wxs5jKE4vEzArvpqG</string>
    <string name="unsbuscribe_url">https://iid.googleapis.com/v1/web/iid/</string>
    <string name="expense_added">Expense Added</string>
    <string name="expense_edited">Expense Edited</string>
    <string name="expense_deleted">Expense Deleted</string>
    <string name="notif_title">title</string>
    <string name="notif_message">message</string>
    <string name="notif_to">to</string>
    <string name="notif_data">data</string>
    <string name="notif_Authorization">Authorization</string>
    <string name="notif_Content_Type">Content-Type</string>
    <string name="notif_contentType">application/json</string>
    <string name="FCM_API">https://fcm.googleapis.com/fcm/send</string>

    <!--    shopping images-->
    <string name="food">food</string>

    <string name="transitioname">profile</string>

    <string name="intent_image_title">Select a File to Upload</string>

    <string name="orange">#ff7400</string>

    <string name="green">#27AE60</string>

    <string-array name="food">
        <item>drinks</item>
        <item>alcohol</item>
        <item>egg</item>
        <item>milk</item>
        <item>fruit</item>
        <item>food</item>
        <item>apple</item>
        <item>banana</item>
    </string-array>

    <!--    Other-->
    <string-array name="bulb">
        <item>bulb</item>
        <item>learning</item>
        <item>book</item>
        <item>power</item>
    </string-array>
    <string-array name="gas">
        <item>gas</item>
        <item>fuel</item>
    </string-array>
    <string-array name="grocery">
        <item>costco</item>
        <item>amazon</item>
        <item>walmart</item>
        <item>cart</item>
        <item>winco</item>
    </string-array>
    <string-array name="house">
        <item>internet</item>
        <item>house</item>
        <item>rent</item>
    </string-array>

    <string name="adunitid">ca-app-pub-6076864297699362/6131707000</string>
<!--    <string name="adunitid">ca-app-pub-3940256099942544/6300978111</string>-->
</resources>
