<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/orderbyCategory"
        android:title="@string/mnu_orderbycategory"
        android:icon="@drawable/category_order"
        app:showAsAction="ifRoom|withText"
        android:orderInCategory="0"
        />

    <item
        android:id="@+id/orderbyDate"
        android:title="@string/mnu_resetorder"
        android:icon="@drawable/orderby_date"
        app:showAsAction="ifRoom|withText"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/settle_up"
        android:icon="@drawable/payment"
        android:title="@string/settle_up"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/export"
        android:title="@string/mnu_export"
        android:icon="@drawable/share"
        android:orderInCategory="3"/>

    <item
        android:id="@+id/archivedExp"
        android:title="@string/archivedExp"
        android:orderInCategory="4"/>

    <item
        android:id="@+id/signout"
        android:icon="@drawable/logout"
        android:title="@string/signout"
        android:orderInCategory="6"/>

</menu>