<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/addGroup"
        android:title="@string/add"
        app:showAsAction="always|withText"
        android:icon="@drawable/save"
        android:orderInCategory="1"/>
    <item
        android:id="@+id/saveGroup"
        android:title="@string/save"
        android:icon="@drawable/save"
        app:showAsAction="always|withText"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/deleteGroup"
        android:title="@string/delete"
        android:icon="@drawable/delete"
        app:showAsAction="always|withText"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/gotoGroupList"
        android:title="@string/cancel"
        android:icon="@drawable/cancel"
        app:showAsAction="always|withText"
        android:orderInCategory="5"/>

</menu>