<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin_10"
              android:paddingLeft="@dimen/activity_horizontal_margin_10"
              android:paddingRight="@dimen/activity_horizontal_margin_10"
              android:paddingTop="@dimen/activity_vertical_margin_10"
              tools:context="com.google.app.splitwise_clone.SignIn"
              android:gravity="top">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/ToolbarStyle"
        android:background="@color/skyBlue"
        android:layout_gravity="bottom"
        android:layout_marginLeft="@dimen/list_toolbar_side_margin"
        android:layout_marginRight="@dimen/list_toolbar_side_margin"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_collapseMode="parallax" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_marginTop_10"
        android:id="@+id/label_userName"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <AutoCompleteTextView
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_username"
            android:imeOptions="actionNext"
            android:nextFocusForward="@id/register_email"
            android:inputType="textNoSuggestions"
            android:maxLength="@integer/user_name_length"
            android:maxLines="@integer/signUp_lines"
            android:textColor="@color/black"
            android:textIsSelectable="false"
            android:textSize="@dimen/signUp_textSize"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:layout_marginTop="@dimen/layout_marginTop_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_userName"
        android:textColorHint="@color/black"
        tools:layout_editor_absoluteX="10dp">

        <AutoCompleteTextView
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/prompt_email"
            android:imeOptions="actionNext"
            android:nextFocusForward="@id/register_password"
            android:inputType="textEmailAddress"
            android:maxLines="@integer/signUp_lines"
            android:textColor="@color/black"
            android:textIsSelectable="false"
            android:textSize="@dimen/signUp_textSize"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password1"
            app:layout_constraintTop_toBottomOf="@+id/email"
            android:textColorHint="@color/black">

            <EditText
                android:id="@+id/register_password"
                android:textSize="@dimen/signUp_textSize"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:imeOptions="actionNext"
                android:nextFocusForward="@id/label_confirm_password"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="@integer/signUp_lines"
                android:textStyle="bold"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/label_confirm_password"
            app:layout_constraintTop_toBottomOf="@+id/password1"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black">

            <EditText
                android:id="@+id/register_confirm_password"
                android:textColor="@color/black"
                android:textSize="@dimen/signUp_textSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password_again"
                android:imeActionId="@integer/register_form_finished"
                android:imeActionLabel="@string/action_sign_up"
                android:nextFocusForward="@id/register_sign_up_button"
                android:inputType="textPassword"
                android:maxLines="@integer/signUp_lines"
                android:textStyle="bold"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/register_sign_up_button"
            style="?android:textAppearanceMedium"
            app:layout_constraintTop_toBottomOf="@+id/label_confirm_password"
            android:background="@color/white"
            android:textColor="@color/black"
            android:onClick="signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_marginTop_16"
            android:text="@string/action_sign_up"
            android:textStyle="bold"/>

    <Button
        android:id="@+id/login_bn"
        style="?android:textAppearanceMedium"
        app:layout_constraintTop_toBottomOf="@+id/label_confirm_password"
        android:background="@color/white"
        android:textColor="@color/black"
        android:onClick="login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_marginTop_16"
        android:visibility="invisible"
        android:text="@string/action_Login"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/getSignUp"
        style="?android:textAppearanceMedium"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/white"
        android:textColor="@color/black"
        android:onClick="getSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_getSignUp"
        android:visibility="invisible"
        android:layout_marginBottom="@dimen/layout_marginBottom_16"
        android:textStyle="bold"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/getLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_bn">

    </ProgressBar>


    <Button
        android:id="@+id/getLogin"
        style="?android:textAppearanceMedium"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/white"
        android:textColor="@color/black"
        android:onClick="getLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_getLogin"
        android:layout_marginBottom="@dimen/layout_marginBottom_16"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/offline_iv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/offline"
        app:srcCompat="@drawable/offline"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="-6dp"></androidx.appcompat.widget.AppCompatImageView>


</androidx.constraintlayout.widget.ConstraintLayout>